<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Covid19</string>

    <!--    Main-->
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="help">Help</string>
    <string name="deaths">Deaths</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="confirmed">Confirmed</string>
    <string name="uae_today">UAE Today</string>
    <string name="infected_cases">Infected Cases</string>
    <string name="world_today">World Today</string>
    <string name="specialized_hospitals">Specialized Hospitals</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="have_you_tested_for_corona_virus">Have you tested for corona virus?</string>
    <string name="are_you_having_symptoms">Are you having symptoms?</string>
    <string name="for_myself">For Myself</string>
    <string name="get_help">Get Help</string>
    <string name="none">None</string>
    <string name="success_application">Your Application has been submitted successfully.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="ui">UI</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>

    <!--    Contacts-->
    <string name="dha">DHA</string>
    <string name="ambulance">Ambulance</string>
    <string name="dubai_police">Dubai Police</string>
    <string name="dha_num" translatable="false">800342</string>
    <string name="ambulance_num" translatable="false">998</string>
    <string name="dubai_police_num" translatable="false">999</string>
    <string name="saudi_german_hostpital">Saudi German Hospital</string>
    <string name="mediclinic_hostpital">Mediclinic Parkview Hospital</string>
    <string name="rashid_hospital">Rashid Hospital</string>
    <string name="saudi_german_num" translatable="false">8002211</string>
    <string name="saudi_location" translatable="false">25.097117, 55.184113</string>
    <string name="mediclinic_number" translatable="false">8001999</string>
    <string name="mediclinic_location" translatable="false">25.065733, 55.248860</string>
    <string name="rashid_h_number" translatable="false">42192000</string>
    <string name="rashid_h_location" translatable="false">25.244263, 55.318132</string>
    <string name="dark_mode_enabled">Dark Mode Enabled.</string>
    <string name="dark_mode_disabled">Dark Mode Disabled.</string>
    <string name="send_feedback">Send feedback</string>
    <string name="feedback_summary">Report technical issues or suggest new features</string>
    <string name="dark_mode_summary">Click to switch on or off</string>

</resources>