<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.covid19.main.MainViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/ic_coronavirus"
            app:menu="@menu/menu"
            app:title="@string/app_name"
            app:titleMarginStart="@dimen/dimen_24"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dimen_46">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/world_today"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="@dimen/dimen_8"
                    app:cardCornerRadius="@dimen/dimen_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@string/infected_cases"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:id="@+id/total_infected_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.total.confirmed)}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textStyle="bold"
                                tools:text="@tools:sample/us_zipcodes" />

                        </LinearLayout>

                        <View
                            android:id="@+id/divider2"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?android:attr/listDivider" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@string/deaths"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                            <TextView
                                android:id="@+id/total_deaths_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.total.deaths)}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="@tools:sample/us_zipcodes" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:text="@string/uae_today"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/dimen_8">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/confirmed_img"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/confirmed"
                                app:srcCompat="@drawable/ic_infected" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_8"
                                android:layout_marginBottom="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_slab_light"
                                android:text="@string/confirmed"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                            <TextView
                                android:id="@+id/confirmed_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.country.cases.total)}"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="@tools:sample/us_zipcodes" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_weight="1"
                        app:cardCornerRadius="@dimen/dimen_8">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/recovered_img"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/recovered"
                                app:srcCompat="@drawable/ic_patient" />

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_8"
                                android:layout_marginBottom="@dimen/dimen_8"
                                android:fontFamily="@font/roboto_slab_light"
                                android:text="@string/recovered"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.country.cases.recovered)}"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="@tools:sample/us_zipcodes" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/critical_img"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/active"
                                app:srcCompat="@drawable/ic_medical_care" />

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_light"
                                android:text="@string/active"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                            <TextView
                                android:id="@+id/textView12"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.country.cases.active)}"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="@tools:sample/us_zipcodes" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen_8"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/deaths_img"
                                android:layout_width="match_parent"
                                android:layout_height="100dp"
                                android:contentDescription="@string/deaths"
                                app:srcCompat="@drawable/ic_spirit" />

                            <TextView
                                android:id="@+id/textView13"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_light"
                                android:text="@string/deaths"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                            <TextView
                                android:id="@+id/textView14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/roboto_slab_bold"
                                android:text="@{String.valueOf(viewModel.country.deaths.total)}"
                                android:textAlignment="center"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                tools:text="@tools:sample/us_zipcodes" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/help_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_shape"
            android:text="@string/help" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>